--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,6 @@
 DATABASE_URL=""
-NEXTAUTH_URL=""
-NEXTAUTH_SECRET=""
-SENDGRID_API=""
-EMAIL_FROM=""
-EMAIL_SERVER_HOST=""
-EMAIL_SERVER_PORT=""
-EMAIL_SERVER_USER=""
-EMAIL_SERVER_PASSWORD=$SENDGRID_API
-GITHUB_ID=""
-GITHUB_SECRET=""
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+AUTH_URL=""
+AUTH_SECRET=""
+KEYCLOAK_ID=""
+KEYCLOAK_SECRET=""
+KEYCLOAK_ISSUER=""
