--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "db": "pnpm db:migrate && pnpm db:generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.10.2",
+    "@auth/core": "^0.28.0",
+    "@auth/prisma-adapter": "^1.5.0",
+    "@prisma/client": "^5.11.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -35,21 +35,19 @@
     "geist": "^1.2.2",
     "lucide-react": "^0.344.0",
     "next": "14.2.0-canary.1",
-    "next-auth": "^4.24.7",
+    "next-auth": "5.0.0-beta.15",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
-    "prisma": "^5.10.2",
+    "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.11.25",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "@types/node": "^20.11.26",
+    "@types/react": "^18.2.65",
+    "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "postcss": "^8.4.35",
