--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "db": "pnpm db:migrate && pnpm db:generate"
   },
   "dependencies": {
-    "@auth/core": "^0.28.0",
-    "@auth/prisma-adapter": "^1.5.0",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -34,19 +32,19 @@
     "fs": "0.0.1-security",
     "geist": "^1.2.2",
     "lucide-react": "^0.344.0",
-    "next": "14.2.0-canary.1",
-    "next-auth": "5.0.0-beta.15",
+    "next": "14.2.0-canary.24",
+    "next-auth": "4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.12",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.11.26",
-    "@types/react": "^18.2.65",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
